--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "eleventy-plugin-svg-contents",
   "version": "0.5.0",
-  "description": "A plugin for 11ty to take a file and provide the contents of that file to a template (mostly used for SVGs)",
+  "description": "A plugin for 11ty to take an SVG and provide the contents of that file to a template",
   "main": ".eleventy.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "eleventy",
     "eleventy-plugin"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brob/eleventy-plugin-svg-contents.git"
+  },
+  "bugs": {
+    "url": "https://github.com/brob/eleventy-plugin-svg-contents/issues"
+  },
+  "homepage": "https://github.com/brob/eleventy-plugin-svg-contents",
   "author": {
     "name": "Bryan Robinson",
     "email": "bryan@codecontemporary.com",
     "url": "https://bryanlrobinson.com"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@11ty/eleventy": "^0.8.3"
+  }
 }
