--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eleventy-plugin"
   ],
   "scripts": {
+    "test": "mocha",
     "lint:js": "npx eslint \"./src/**/*.js\""
   },
   "repository": {
@@ -28,7 +29,8 @@
     "@11ty/eleventy": "^0.8.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1"
+    "eslint-plugin-import": "^2.20.1",
+    "mocha": "^7.1.2"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3"
